--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,37 @@
-body {
-  color: white;
-  background-color: green; }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: Helvetica; }
 
-.oke {
+#nav {
+  border-bottom: 1px solid black;
+  background-color: grey;
+  height: 70px;
+  line-height: 70px; }
+
+#menu a {
+  text-decoration: none;
+  color: white;
+  line-height: 70px; }
+
+#menu a:hover {
   color: black; }
+
+#menu a.active {
+  color: white; }
+
+#burger {
+  font-size: 30px;
+  display: none; }
+
+@media screen and (max-width: 600px) {
+  #nav a:not(:first-child) {
+    float: right;
+    width: 100%;
+    background-color: gray;
+    text-align: center;
+    display: none; }
+  #burger {
+    float: right;
+    display: block; } }
