--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,15 @@ html, body {
 #nav {
   border-bottom: 1px solid black;
   background-color: grey;
+  font-size: 20px;
   height: 70px;
   line-height: 70px; }
 
 #menu a {
   text-decoration: none;
   color: white;
-  line-height: 70px; }
+  line-height: 70px;
+  margin: 0 10px; }
 
 #menu a:hover {
   color: black; }
@@ -25,13 +27,15 @@ html, body {
   font-size: 30px;
   display: none; }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   #nav a:not(:first-child) {
     float: right;
     width: 100%;
     background-color: gray;
     text-align: center;
     display: none; }
+  #nav a:first-child {
+    margin: 10px; }
   #burger {
     float: right;
     display: block; } }
